<resources>
    <string name="app_name">Budget Bite</string>
    <string name="bottom_nav_title_more">More</string>
    <string name="bottom_nav_title_planner">Planner</string>
    <string name="bottom_nav_title_search">Search</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_measurement_min">Measurement min is 1</string>
    <string name="format_calories">%1$s Cal</string>
    <string name="format_calories_price">%1$s %2$s \u2022 %3$s%4$s</string>
    <string name="format_nutrition_details">%1$s, %2$s, %3$s</string>
    <string name="format_price">%1$s€</string>
    <string name="hint_calories">Calories</string>
    <string name="hint_carbs">Carbs</string>
    <string name="hint_fat">Fat</string>
    <string name="hint_ingredient_name">Ingredient Name</string>
    <string name="hint_measurement">Measurement</string>
    <string name="hint_meal_plan_name">Meal Plan Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_protein">Protein</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_recipe_name">Recipe Name</string>
    <string name="label_calories">Calories</string>
    <string name="label_carbs">g Carbs</string>
    <string name="label_fat">g Fat</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_measurement">Measurement</string>
    <string name="label_nutrition_info">Nutrition Info</string>
    <string name="label_package_info">Package Info</string>
    <string name="label_protein">g Protein</string>
    <string name="measurement_type_quantity">units</string>
    <string name="measurement_type_volume">milliliter</string>
    <string name="measurement_type_weight">grams</string>
    <string name="symbol_arrows"><![CDATA[< >]]></string>
    <string name="symbol_currency">€</string>
    <string name="symbol_dot">\u2022</string>
    <string name="tab_all">All</string>
    <string name="tab_ingredients">Ingredients</string>
    <string name="tab_meal_plans">Meal Plans</string>
    <string name="tab_recipes">Recipes</string>
    <string name="text_gram">g</string>
    <string name="text_kcal">kcal</string>
    <string name="title_discard_adding_ingredients">Exit without adding ingredients?</string>
    <string name="title_discard_adding_meal_items">Exit without adding meal items?</string>
    <string name="title_discard_changes">Discard changes?</string>
    <string name="title_dummy">Dummy</string>
    <string name="title_more">More</string>
    <string name="title_planner">Planner</string>
    <string name="toast_saved">Saved</string>
</resources>